add type field and init basic logic

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,7 +3,7 @@ body {
 }
 
 section.main form {
-  margin-top: 100px;
+  margin-top: 50px;
   width: 400px;
 }
 
@@ -12,13 +12,26 @@ section.main form {
 }
 
 section.main form select,
-input[type="file"] {
+input[type="file"],
+input {
   margin-top: 10px;
   font-size: 24px;
 }
 
 section.main #generateButton {
   font-size: 24px;
+}
+
+section.main .config-block {
+  width: 600px;
+  overflow-x: auto;
+}
+
+.block {
+  margin-top: 15px;
+  border-radius: 10px;
+  border: 2px solid gray;
+  padding: 15px;
 }
 
 .row {
@@ -29,7 +42,7 @@ section.main #generateButton {
 
 .container {
   margin: 0 auto;
-  width: 900px;
+  width: 1100px;
 }
 
 #err {
@@ -38,4 +51,12 @@ section.main #generateButton {
 
 .error {
   color: red;
+}
+
+.flex {
+  display: flex;
+}
+
+.space-between {
+  justify-content: space-between;
 }
